updated fourth solution