@@ -1,16 +1,32 @@
-import dto.BookingRequest;
-import enums.AddOn;
-import enums.LegacyRoomTypes;
-import feeCalculator.HostelFeeCalculator;
-import repository.FakeBookingRepo;
-
-import java.util.List;
+import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
         System.out.println("=== Hostel Fee Calculator ===");
-        BookingRequest req = new BookingRequest(LegacyRoomTypes.DOUBLE, List.of(AddOn.LAUNDRY, AddOn.MESS));
-        HostelFeeCalculator calc = new HostelFeeCalculator(new FakeBookingRepo());
+        List<RoomPricing> rooms = Arrays.asList(
+            new SingleRoomPricing(), 
+            new DoubleRoomPricing(),
+            new TripleRoomPricing(), 
+            new DeluxeRoomPricing()
+        );
+
+        List<AddOnPricing> addOns = Arrays.asList(
+            new MessPricing(), 
+            new LaundryPricing(), 
+            new GymPricing()
+        );
+
+        HostelFeeCalculator calc = new HostelFeeCalculator(
+            new FakeBookingRepo(), 
+            rooms, 
+            addOns
+        );
+
+        BookingRequest req = new BookingRequest(
+            LegacyRoomTypes.DOUBLE, 
+            List.of(AddOn.LAUNDRY, AddOn.MESS)
+        );
+        
         calc.process(req);
     }
 }
